tests/type/infered_int_type_2.rev
var a = 1
var e: int = a + 1.5 // error: trying to assign value of type 'float' to variable of type 'int'